k8s/demo-app.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo-app
spec:
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      serviceAccountName: vault-tokenreview
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: demo-app
        image: docker-registry.rdti.com/com.redi.devops/demo-app:0.0.1
        command: ["/bin/sh", "-c", "source /env/variables; ./demo-app.sh"]
        volumeMounts:
        - name: shared-data
          mountPath: /env
